Tidied up mixins, mobile+tablet, yet to tidy desktop

--- a/exp.scss
+++ b/exp.scss
@@ -1,22 +1,8 @@
-@mixin card-modular-desk() { 
-    @include card();
-    margin: 0 auto;
-    margin-top: 2em;
-    width: 40vw;
-    height: min-content;
-    align-self: space-between;
-    time {
-        font-family: $monaco;
-        font-size: 0.7em;
-        color: gray;
-        font-style: italic;
-    }
-    .card-modular-img {
-        margin: 0 auto;
-        img {
-            margin: 0 auto;
-            width: 100%;
-            border-radius: 1em 1em 1em 1em;
-        }
-    }
-}
+/////@at-root
+
+//////@at-root
+
+
+
+
+>>>>>TIDY UP DESKTOP CSS>>>>>>>
