Finally, it's clean! That was extremely tedious but I somehow loved it. Only thing left to do is improve the expand function with a wrapper div and then fill out the site's content

--- a/exp.scss
+++ b/exp.scss
@@ -1,8 +1,12 @@
-/////@at-root
-
-//////@at-root
 
 
 
 
->>>>>TIDY UP DESKTOP CSS>>>>>>>
+
+//////
+@mixin clear-card-mob() { //
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    padding: 2em;
+}
