--- a/style.css
+++ b/style.css
@@ -60,13 +60,22 @@ header h1 {
   padding: 0.3em;
   padding-right: 0.6em;
   font-family: "Rammetto One", cursive;
-  font-size: 1.7em;
+  font-size: 2.3em;
   color: rgba(49, 49, 49, 0.867);
   transition: 0.3s;
   mix-blend-mode: multiply;
+  line-height: 95%;
 }
 header #head-circle {
-  display: none;
+  z-index: 1;
+  position: absolute;
+  align-self: flex-end;
+  top: -3rem;
+  left: 1rem;
+  height: 7em;
+  width: 7em;
+  background-color: rgb(54, 0, 217);
+  border-radius: 50%;
 }
 
 #nav-cont-mob {
@@ -141,7 +150,8 @@ p {
   background-color: rgba(242, 253, 241, 0.1);
 }
 .card h2 {
-  color: rgb(67, 96, 64);
+  font-size: 2em;
+  color: rgb(41, 0, 163);
   text-align: left;
   left: 2em;
 }
@@ -157,7 +167,8 @@ p {
   box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
 }
 .card-modular h2 {
-  color: rgb(67, 96, 64);
+  font-size: 2em;
+  color: rgb(41, 0, 163);
   text-align: left;
   left: 2em;
 }
@@ -184,7 +195,8 @@ p {
   margin: 2em -2em;
 }
 .card-expand h2 {
-  color: rgb(67, 96, 64);
+  font-size: 2em;
+  color: rgb(41, 0, 163);
   text-align: left;
   left: 2em;
 }
@@ -195,7 +207,7 @@ p {
   top: 4.1em;
   right: 1em;
   font-family: "Monaco", monospace;
-  color: rgb(53, 0, 213);
+  color: rgb(137, 126, 109);
 }
 
 .desk-page-sub {
@@ -222,7 +234,7 @@ p {
   padding: 0.5em;
   font-size: 1em;
   color: white;
-  background-color: rgb(53, 0, 213);
+  background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
   position: relative;
@@ -255,7 +267,7 @@ p {
   padding: 0.5em;
   font-size: 1em;
   color: white;
-  background-color: rgb(53, 0, 213);
+  background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
   position: relative;
@@ -289,7 +301,7 @@ footer #contact-button {
   padding: 0.5em;
   font-size: 1em;
   color: white;
-  background-color: rgb(53, 0, 213);
+  background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
   position: relative;
@@ -369,7 +381,7 @@ footer #contact-button {
     left: 0em;
     font-family: "Monaco", monospace;
     font-size: 1.2em;
-    color: rgb(137, 126, 109);
+    color: rgb(107, 92, 73);
     writing-mode: vertical-lr;
   }
 
@@ -391,7 +403,8 @@ footer #contact-button {
     max-height: none;
   }
   .card h2 {
-    color: rgb(67, 96, 64);
+    font-size: 2em;
+    color: rgb(41, 0, 163);
     text-align: left;
     left: 2em;
   }
@@ -415,6 +428,9 @@ footer #contact-button {
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
   }
+  .card-modular h2 {
+    text-align: center;
+  }
 
   .card:hover,
 .card-modular:hover,
@@ -437,7 +453,8 @@ footer #contact-button {
     mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
   }
   .card-expand h2 {
-    color: rgb(67, 96, 64);
+    font-size: 2em;
+    color: rgb(41, 0, 163);
     text-align: left;
     left: 2em;
   }
@@ -455,13 +472,13 @@ footer #contact-button {
     font-size: 1em;
     top: 5.5em;
     left: 40vw;
-    transition: 0.3s;
-    color: rgb(53, 0, 213);
+    transition: 0.1s;
+    color: rgba(49, 49, 49, 0.867);
   }
 
   .expand-icon:hover {
     transform: scale(1);
-    color: rgb(64, 0, 255);
+    color: gray;
   }
 
   #expand-check-1:hover ~ #journal-card-1,
@@ -513,6 +530,7 @@ footer #contact-button {
 
   header {
     position: relative;
+    display: flex;
     flex-direction: row-reverse;
     overflow: hidden !important;
     width: 100vw;
@@ -522,14 +540,18 @@ footer #contact-button {
   }
   header h1 {
     font-size: 4em;
-    justify-self: flex-end;
+    align-self: center;
   }
   header #head-circle {
-    position: fixed;
-    top: -11em;
-    right: -6em;
-    width: 20em;
-    height: 20em;
+    top: -5em;
+    left: auto;
+    right: 10em;
+    z-index: 1;
+    position: absolute;
+    justify-self: flex-start;
+    align-self: flex-start;
+    height: 14em;
+    width: 14em;
   }
 
   #nav-cont-mob {
@@ -543,6 +565,7 @@ footer #contact-button {
     left: 1em;
     z-index: 3;
     font-size: 1.5em;
+    color: rgba(49, 49, 49, 0.867);
     transition: 0.1s;
   }
 
@@ -588,7 +611,7 @@ footer #contact-button {
     padding: 2em;
     padding-right: 0.5em;
     font-size: 1.5em;
-    font-family: "Monaco", monospace;
+    font-family: "Karla", sans-serif;
   }
   .nav-list a,
 .nav-list a:visited,
@@ -596,23 +619,24 @@ footer #contact-button {
 #nav-list-desk a:visited {
     text-decoration: none;
     color: rgba(49, 49, 49, 0.867);
-    transition: 0.3s;
+    transition: 0.1s;
   }
   .nav-list a:hover,
 #nav-list-desk a:hover {
-    color: rgb(64, 0, 255);
+    color: rgba(49, 49, 49, 0.867);
     text-transform: lowercase;
   }
   .nav-list a:hover::before,
 #nav-list-desk a:hover::before {
     content: "cd ./";
+    color: gray;
   }
   .nav-list #portrait,
 #nav-list-desk #portrait {
     width: 5em;
     margin: 2em 1em 0 0;
     border-radius: 50%;
-    border: 2px rgb(137, 126, 109) solid;
+    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
   }
 
   #about-img-cont {
@@ -631,7 +655,8 @@ footer #contact-button {
     justify-content: center;
   }
   #about-img-cont h2 {
-    color: rgb(67, 96, 64);
+    font-size: 2em;
+    color: rgb(41, 0, 163);
     text-align: left;
     left: 2em;
   }
@@ -672,7 +697,8 @@ footer #contact-button {
     justify-content: space-evenly;
   }
   #about-buttons h2 {
-    color: rgb(67, 96, 64);
+    font-size: 2em;
+    color: rgb(41, 0, 163);
     text-align: left;
     left: 2em;
   }
@@ -680,14 +706,14 @@ footer #contact-button {
     padding: 0.5em;
     font-size: 1em;
     color: white;
-    background-color: rgb(53, 0, 213);
+    background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
     transition: 0.1s;
   }
   #about-buttons .button-cont .button:hover {
     cursor: pointer;
-    background-color: rgb(64, 0, 255);
+    background-color: rgb(54, 0, 217);
   }
 
   #logos-card {
@@ -732,7 +758,8 @@ footer #contact-button {
     justify-content: space-evenly;
   }
   .download-button h2 {
-    color: rgb(67, 96, 64);
+    font-size: 2em;
+    color: rgb(41, 0, 163);
     text-align: left;
     left: 2em;
   }
@@ -741,7 +768,7 @@ footer #contact-button {
     padding: 0.5em;
     font-size: 1em;
     color: white;
-    background-color: rgb(53, 0, 213);
+    background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
     transition: 0.1s;
@@ -751,7 +778,7 @@ footer #contact-button {
   .download-button a:hover,
 .download-button a:visited:hover {
     cursor: pointer;
-    background-color: rgb(64, 0, 255);
+    background-color: rgb(54, 0, 217);
   }
 
   #resume-iframe {
@@ -763,14 +790,14 @@ footer #contact-button {
     padding: 0.5em;
     font-size: 1em;
     color: white;
-    background-color: rgb(53, 0, 213);
+    background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
     transition: 0.1s;
   }
   #contact-button:hover {
     cursor: pointer;
-    background-color: rgb(64, 0, 255);
+    background-color: rgb(54, 0, 217);
   }
 }
 
